# tictoc

./: .gitattributes  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  package.yml  release.yml
docs/: usage.md
src/tictoc/: __init__.py  _human.py  _optional.py  _parse.py  interval.py  speed.py  tictoc.py  tictoc_interval.py  tictoc_speed.py  tictoc_time.py  time.py  timer.py
tests/: test_interval.py  test_time_speed.py  test_timer.py
